# denoflate

./: .gitignore  Cargo.toml  LICENSE  README.md  mod.ts
.cargo/: config.toml
.github/workflows/: build.yml  lint-rust.yml  lint.yml  pr-wasm.yml  pr.yml
bench/: bench.js
dist-tools/: build-wasm.sh  pack-wasm.ts
src/: deno.rs  lib.rs  wasm.rs
test/: denoflate.test.js
tools/: rustfmt.sh
