[package]
name = "denoflate"
version = "0.4.1"
authors = ["TTtie <tttiett@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
inflate = { git = "https://github.com/Denocord/inflate.git" }
deno_core = "0.53.0"

[profile.release]
lto = true