[package]
name = "denoflate"
version = "0.6.0"
authors = ["TTtie <tttiett@outlook.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
inflate = { git = "https://github.com/Denocord/inflate.git", rev = "db03fd4d23a38da5fd64b93855ec990949278fbb" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.67"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.54.0"

[profile.release]
lto = true
