[package]
name = "denoflate"
version = "0.6.0"
authors = ["TTtie <tttiett@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.0", features = ["zlib"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.68"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.60.0"

[profile.release]
lto = true
opt-level = 3